--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
 	
 {% block content %}
-<h1>Posts</h1>
-	{% for post in posts %}
-		<h2>{{ post.title }}</h2>
-		<small>Published on {{ post.published_at | date:"M d, Y" }} by {{ post.author | title}}</small>
-		<p>{{ post.content }}</p>
-		
-		{% if request.user.is_authenticated and request.user == post.author %}
-		<p>
-			<a href="{% url 'post-edit' post.id %}">Edit</a> 
-			<a href="{% url 'post-delete' post.id%}">Delete</a>
-		</p>
-		{% endif %}
-		
-	{% endfor %}
+  <h1>Посты</h1>
+  {% for post in posts %}
+    <h2><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+    <small>Опубликовано {{ post.published_at | date:"d.m.Y" }} by {{ post.author | title }}</small>
+    
+    {% if request.user.is_authenticated and request.user == post.author %}
+      <p>
+        <a href="{% url 'post-edit' post.id %}">Редактировать</a> 
+        <a href="{% url 'post-delete' post.id %}">Удалить</a>
+      </p>
+    {% endif %}
+  {% endfor %}
 {% endblock content %}
