--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-<h2>Delete Post</h2>
+<h2>Удалить потс</h2>
 
 <form method="POST">
   {% csrf_token %}
-  <p>Are you sure that you want to delete the post "{{post.title}}"?</p>
+  <p>Вы уверены, что хотите удалить эту публикацию "{{post.title}}"?</p>
   <div>
-    <button type="submit">Yes, Delete</button>
-    <a href="{% url 'posts' %}">Cancel</a>
+    <button type="submit">Да, удалить</button>
+    <a href="{% url 'posts' %}">Назад</a>
   </div>
 </form>
 
