--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,6 +5,12 @@
   <h2>{{ post.title }}</h2>
   <small>Опубликовано {{ post.published_at | date:"d.m.Y" }} by {{ post.author | title }}</small>
   <p>{{ post.content }}</p>
+  {% if request.user.is_authenticated and request.user == post.author %}
+  <p>
+    <a href="{% url 'post-edit' post.id %}">Редактировать</a>
+    <a href="{% url 'post-delete' post.id %}">Удалить</a>
+  </p>
+{% endif %}
 
   <h3>Комментарии:</h3>
   {% for comment in post.comments.all %}
