--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,14 @@
   <body>
   	<header>
   		{%if request.user.is_authenticated %}
-  			<a href="{% url 'posts' %}">My Posts</a>
-  			<a href="{% url 'post-create' %}">New Post</a>
-  			<span>Hi {{ request.user.username | title }}</span>
-  			<a href="{% url 'logout' %}">Logout</a>
+  			<a href="{% url 'posts' %}">Все посты</a>
+			<a href="{% url 'author-posts' request.user.id %}">Мои посты</a>
+  			<a href="{% url 'post-create' %}">Создать пост</a>
+  			<span>Вы вошли как {{ request.user.username | title }}</span>
+  			<a href="{% url 'logout' %}">Выйти</a>
   		{%else%}
-  			<a href="{% url 'login' %}">Login</a>
-  			<a href="{% url 'register' %}">Register</a>
+  			<a href="{% url 'login' %}">Войти</a>
+  			<a href="{% url 'register' %}">Зарегистроваться</a>
   		{%endif%}
   	</header>
   	<main>
